# Debugger-Dynamics-VR

./: .gitignore  CMakeLists.txt  CMakeSettings.json  PCTP.cpp  PCTP.sln  PCTP.vcxproj  PCTP.vcxproj.filters  README.MD  data_tools.cpp  data_tools.h  file_tools.cpp  file_tools.h  lib_mac.h  university projects - Ярлык.lnk
FileProtocol/: README.md
FileProtocol/auxiliary/: file_tools.cpp
FileProtocol/include/: FileProtocol.h
IODebug/: IODebug.Build.cs  README.md
IODebug/Private/: IOBehaviorComponent.cpp  IODebug.cpp  IODebugSubsystem.cpp
IODebug/Public/: IOBehaviorComponent.h  IODebugSubsystem.h
UE_Scene/: .gitignore  RusAtom.uproject
UE_Scene/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
UE_Scene/Content/: Diamond.uasset  Diamond_Blueprint.uasset  Level1.umap  Shape_Cube_Blueprint.uasset
UE_Scene/Content/Blueprints/: BP_character.uasset  Cube_location.uasset  Diamond_Blueprint.uasset  NewBlueprint.uasset  Rotation.uasset  button_blue.uasset  button_green.uasset  button_red.uasset
UE_Scene/Content/Developers/: output.txt
UE_Scene/Content/StarterContent/Props/: DefaultMaterial_Roughness_Mat.uasset  IronMaterial.uasset  LedMaterial.uasset  defaultPolygonShader.uasset
UE_Scene/Content/my_content/: Diamond.uasset  button_green_pCylinder10.uasset  button_pCylinder10.uasset  ledDiod_blue.uasset  ledDiod_green.uasset  ledDiod_red.uasset
UE_Scene/Content/my_content/materials/: LedMaterial_blue.uasset  LedMaterial_green.uasset  LedMaterial_red.uasset
UE_Scene/Saved/Autosaves/Engine/BasicShapes/: BasicShapeMaterial_Auto5.uasset  BasicShapeMaterial_Auto6.uasset  BasicShapeMaterial_Auto7.uasset
UE_Scene/Saved/Autosaves/Game/: Diamond_Auto2.uasset  Diamond_Auto3.uasset  Diamond_Auto4.uasset  Diamond_Blueprint_Auto1.uasset  Diamond_Blueprint_Auto2.uasset  Level1_Auto1.umap  Level1_Auto2.umap  Level1_Auto3.umap  Level1_Auto4.umap  Level1_Auto5.umap  Level1_Auto6.umap  Level1_Auto7.umap  Level1_Auto8.umap  Shape_Cube_Blueprint_Auto6.uasset
UE_Scene/Saved/Autosaves/Game/Blueprints/: Cube_location_Auto6.uasset  Diamond_Blueprint_Auto6.uasset  NewBlueprint_Auto1.uasset  NewPawn_Auto1.uasset  Rotation_Auto1.uasset  Rotation_Auto2.uasset  Rotation_Auto4.uasset  Rotation_Auto7.uasset  button_Auto2.uasset  button_Auto3.uasset  button_Auto4.uasset  button_blue_Auto4.uasset  button_green_Auto1.uasset  button_red_Auto4.uasset
UE_Scene/Saved/Autosaves/Game/StarterContent/Props/: LightFixtureRecessed_Auto8.uasset  button_pCylinder10_Auto7.uasset  button_pCylinder9_Auto7.uasset  defaultPolygonShader_Auto7.uasset
UE_Scene/Saved/Autosaves/Game/VRTemplate/Maps/: VRTemplateMap_Auto1.umap
UE_Scene/Saved/Autosaves/Game/my_content/: IronMaterial_Auto1.uasset  LedMaterial_Auto1.uasset  button_green_pCylinder10_Auto5.uasset  ledDiod_blue_Auto5.uasset  ledDiod_green_Auto1.uasset  ledDiod_red_Auto1.uasset
UE_Scene/Saved/Autosaves/Temp/: Untitled_1_Auto2.umap  Untitled_1_Auto3.umap
UE_Scene/Saved/Config/WindowsEditor/: EditorPerProjectUserSettings.ini  Engine.ini
UE_Scene/Saved/Crashes/UECC-Windows-0B68463D4830734E7F24EDAB1E4A949C_0000/: CrashContext.runtime-xml  UEMinidump.dmp
UE_Scene/Saved/Crashes/UECC-Windows-13F5B1884689D91709BEBAB9EA6BBF99_0000/: CrashContext.runtime-xml
UE_Scene/Saved/Crashes/UECC-Windows-13F5B1884689D91709BEBAB9EA6BBF99_0001/: CrashContext.runtime-xml  UEMinidump.dmp
UE_Scene/Saved/Crashes/UECC-Windows-5C3E46B64FD2D184885AB79A31661A51_0000/: CrashContext.runtime-xml
UE_Scene/Saved/Crashes/UECC-Windows-C8F63BEA42BD5B9027DF9FBB3249EC55_0000/: CrashContext.runtime-xml
UE_Scene/Saved/Crashes/UECC-Windows-C8F63BEA42BD5B9027DF9FBB3249EC55_0001/: CrashContext.runtime-xml  UEMinidump.dmp
UE_Scene/Saved/Crashes/UECC-Windows-D6ACD8304DD7C55F1E4471A708F38578_0000/: CrashContext.runtime-xml
UE_Scene/Saved/Crashes/UECC-Windows-F2C6508D4DA0E90A129A0F88256BF691_0000/: CrashContext.runtime-xml
UE_Scene/Saved/Crashes/UECC-Windows-FFD7F7474D4BB6617AE480B6631473C9_0000/: CrashContext.runtime-xml
UE_Scene/Saved/Crashes/UECC-Windows-FFD7F7474D4BB6617AE480B6631473C9_0001/: CrashContext.runtime-xml
UE_Scene/Saved/SourceControl/: UncontrolledChangelists.json
UE_Scene/Source/: RusAtom.Target.cs  RusAtomEditor.Target.cs
UE_Scene/Source/IODebug/: README.md
UE_Scene/Source/IODebug/Private/: FileProtocol.cpp  IOBehaviorComponent.cpp  IODebugSubsystem.cpp  data_tools.cpp  data_tools.h  file_tools.h
UE_Scene/Source/IODebug/Private/FileProtocol/src/: File.h  FileProtocol.cpp
UE_Scene/Source/IODebug/Public/: IOBehaviorComponent.h
UE_Scene/Source/RusAtom/: RusAtom.Build.cs  RusAtom.cpp
assets/: config.txt
libs/FileProtocol/: .gitignore  CMakeLists.txt
libs/FileProtocol/auxiliary/: data_tools.cpp
libs/FileProtocol/src/: FileProtocol.cpp  data_tools.cpp  data_tools.h
libs/FileProtocol/src/Unix/: File.cpp  File.h  data_tools.cpp  exchange.cpp
libs/FileProtocol/src/Windows/: File.cpp  exchange.cpp
src/: Constants.h  Main.h  main.cpp
src/elements/: ParamContainer.cpp  ParamContainer.h
src/frames/: MainFrame.cpp  MainFrame.h
src/utility/: config.cpp  config.h  protocol.cpp  protocol.h  test_protocol.cpp
x64/Debug/: PCTP.exe.recipe  PCTP.ilk  PCTP.vcxproj.FileListAbsolute.txt  config.txt  log.txt  start.txt  vc142.idb
x64/Debug/PCTP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PCTP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/params/: params_out.txt
x64/Release/: PCTP.exe.recipe  PCTP.iobj  PCTP.ipdb  PCTP.vcxproj.FileListAbsolute.txt  config.txt  log.txt
x64/Release/PCTP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PCTP.lastbuildstate  PCTP.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/params/: params_out.txt
